@@ -109,8 +109,13 @@ comparam.align.tiltalign.BeamTiltOption,Type of beam tilt solution (2 to search)
 comparam.align.tiltalign.FixedOrInitialBeamTilt,Fixed beam tilt value or initial value for search,Float,Y,Y,SD,,Fixed or initial value of beam tilt,
 comparam.align.tiltalign.RobustFitting,Whether to use robust fitting to downweight some points,Bool,Y,Y,SD,,Use robust fitting,
 comparam.align.tiltalign.KFactorScaling,Factor that determines how many points are downweighted,Float,Y,Y,SD,,Robust factor (< 1 downweights more),
+comparam.align.tiltalign.WeightWholeTracks,Apply weighting to entire contours from patch tracking,Bool,Y,Y,SO,,Weight whole patch track contours,
 runtime.TiltAlignment.any.enableStretching,Allow stretching solution if bead number permits,Bool,Y,,NE,,Solve for distortion if enough beads,
 comparam.align.tiltalign.ResidualReportCriterion,Criterion # of SDs above mean residual error to report,Float,,Y,SO,,Threshold for residual report,
+runtime.RestrictAlign.any.targetMeasurementRatio,Target measurement/unknown ratio when there are few fiducials,Float,Y,Y,SD,,Target measurement ratio if restricting,
+runtime.RestrictAlign.any.minMeasurementRatio,Minimum measurement/unknown ratio when there are few fiducials,Float,Y,Y,SD,,Min measurement ratio if restricting,
+runtime.RestrictAlign.any.orderOfRestrictions,Ordered list of parameter restrictions when there are few fiducials,String,Y,Y,SO,,Order in which to apply restrictions,
+runtime.RestrictAlign.any.skipBeamTiltWithOneRot,Whether to skip beam tilt solution when switching to one rotation,Bool,Y,Y,SO,,Skip beam tilt if switch to one rotation,
 ,,,,,,,,
 Tomogram Positioning,,,,,,,,
 runtime.Positioning.any.wholeTomogram,Whether to make a whole tomogram for positioning,Bool,,Y,SD,,Make whole tomogram for positioning,
@@ -137,10 +142,6 @@ runtime.GoldErasing.any.binning,Binning to use in finding gold,Int,Y,Y,SO,,Binni
 runtime.GoldErasing.any.extraDiameter,Extra pixels of diameter to erase,Float,Y,,NE,,Extra pixels of diameter to erase,
 runtime.GoldErasing.any.thickness,Reconstruction thickness if patch or fidless alignment,Int,Y,Y,SO,,Thickness of tomogram to find gold in,
 comparam.golderaser.ccderaser.ExpandCircleIterations,Iterations for expanding patches around circles,Int,Y,Y,SD,,Iterations to grow circular areas,
-runtime.RestrictAlign.any.targetMeasurementRatio,Target measurement/unknown ratio when there are few fiducials,Float,Y,Y,SD,,Target measurement ratio if restricting,
-runtime.RestrictAlign.any.minMeasurementRatio,Minimum measurement/unknown ratio when there are few fiducials,Float,Y,Y,SD,,Min measurement ratio if restricting,
-runtime.RestrictAlign.any.orderOfRestrictions,Ordered list of parameter restrictions when there are few fiducials,String,Y,Y,SO,,Order in which to apply restrictions,
-runtime.RestrictAlign.any.skipBeamTiltWithOneRot,Whether to skip beam tilt solution when switching to one rotation,Bool,Y,Y,SO,,Skip beam tilt if switch to one rotation,
 ,,,,,,,,
 Reconstruction,,,,,,,,
 comparam.tilt.tilt.THICKNESS,Thickness for reconstruction,Int,Y,Y,SO,,Unbinned thickness of reconstruction,
