@@ -312,7 +312,8 @@ Green value; Range is (0.0 - 1.0) Default is 1.0.
 .TP
 .B -b \fIvalue\fR
 Blue value;  Range is (0.0 - 1.0) Default is 1.0.
-.TP -D \fIfile\fR
+.TP
+.B -D \fIfile\fR
 Name of defect list file produced by SerialEM, for correction of
 column, row, and point defects in images that have not had this
 correction applied.  Specifically, frames
@@ -462,9 +463,7 @@ option selects the type of padding: "-n 0" selects no padding; "-n 1"
 selects padding with mean value. (default)
 Float is the only output mode supported.
 Input sizes must have dimensions that fit the requirements for an FFT:
-the size in X must be a multiple of two, and for versions on older
-architectures not using the FFTW library, no size can have a prime factor
-greater than 19.
+the size in X must be a multiple of two.
 .TP
 .B diffusion
 Apply 2D anisotropic diffusion to individual slices, using the simple Perona
@@ -494,10 +493,7 @@ Calculate a Fast Fourier Transform.
 fft does either a forward or inverse FFT, depending
 on the input data type.  The output for a forward 
 transformation is complex float.  
-For a forward transfor, the input size in X must be a multiple of two, and for
-versions on older
-architectures not using the FFTW library, no size can have a prime factor
-greater than 19.
+For a forward transform, the input size in X must be a multiple of two.
 Both 2D and 3D output match the format of the FFT output
 by fftrans(1), in which no data is duplicated and the center is
 shifted to x = 0, y = ny/2.  Older FFT files produced by clip before IMOD 3.5, in
@@ -515,9 +511,8 @@ Everything higher
 than -l and lower then -h is filtered.  The attenuation will be 0.5 at
 the given frequency; the filter factor is the product of
 1/(1+(r/l)**3) if -l is entered and 1/(1+(h/r)**3) if -h is entered,
-where r is the radius in cycles/pixel.  The input sizes
-must be a multiple of two, and must have no prime factors
-greater than 19.
+where r is the radius in cycles/pixel.  The input size
+in X must be a multiple of two.
 .TP
 .B flip
 The flip command is just the root of several types of
